--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,11 @@
+.cm-ySelectionInfo {
+  width: 140px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif!important;
+  font-size: 16px!important;
+  border-radius: 24px;
+  height: 28px;
 
-.CodeMirror {
-  height: 300px;
-  font-size: 14px;
-  line-height: 1.4;
-  font-family: monospace;
-  color: #000;
-  background: #fff;
-  -webkit-tap-highlight-color: transparent;
 }
