--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,54 @@
   align-items: center;
   justify-content: center;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif!important;
-  font-size: 16px!important;
+  font-size: 14px!important;
   border-radius: 24px;
   height: 28px;
+}
+
+.cm-tooltip {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif!important;
+  font-size: 16px!important;
+  box-shadow: 2px 3px 3px 2px rgba(255,255,255,0.2);
+  border-radius: 8px;
+  padding: .25rem 0;
+  
+}
+/* <div
+  class="cm-tooltip-autocomplete cm-tooltip cm-tooltip-below"
+  style="position: fixed; top: 353.438px; left: 387.125px;"
+  >
+  <ul id="cm-ac-wlmb" role="listbox" aria-expanded="true" aria-label="Completions">
+    <li id="cm-ac-wlmb-0" role="option" aria-selected="true">
+      <div class="cm-completionIcon cm-completionIcon-tagName" aria-hidden="true" />
+    
+      <span class="cm-completionLabel">
+        <span class="cm-completionMatchedText">
+          h1
+        </span>
+      </span>
+    </li>
+  </ul>
+  <div class="cm-tooltip cm-completionInfo cm-completionInfo-right" style="top: 15.9436px; max-width: 400px;">
+  HTML heading 1 tag
+  </div>
+ </div> */
+
+
+.cm-completionLabel {
+  display: inline-block;
+  color: #fff;
+  vertical-align: middle;
+  line-height: 1.5rem;
+}
+
+.cm-completionIcon {
+  /* more pretty */
+  display: inline-block;
+  width: .2rem;
+  height: 1.2rem;
+  /* linear-gradient purple pink deepblue */
+  background: linear-gradient(90deg, #ff00ff, #9d47ee, #1aff00);
+  border-radius: 9999px;
+  margin-right: 1rem;
 }
