--- a/src/App.css
+++ b/src/App.css
@@ -1,50 +1,105 @@
+
 .cm-ySelectionInfo {
-  width: 140px;
+  width: 12px !important;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif!important;
+  font-family: sans-serif!important;
   font-size: 14px!important;
   border-radius: 24px;
   height: 28px;
 }
 
+
+
+/* 자동완성시 나타나는 툴팁 */
 .cm-tooltip {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif!important;
+  font-family: sans-serif!important;
   font-size: 16px!important;
   box-shadow: 2px 3px 3px 2px rgba(255,255,255,0.2);
   border-radius: 8px;
   padding: .25rem 0;
   
 }
-/* <div
-  class="cm-tooltip-autocomplete cm-tooltip cm-tooltip-below"
-  style="position: fixed; top: 353.438px; left: 387.125px;"
-  >
-  <ul id="cm-ac-wlmb" role="listbox" aria-expanded="true" aria-label="Completions">
-    <li id="cm-ac-wlmb-0" role="option" aria-selected="true">
-      <div class="cm-completionIcon cm-completionIcon-tagName" aria-hidden="true" />
-    
-      <span class="cm-completionLabel">
-        <span class="cm-completionMatchedText">
-          h1
-        </span>
-      </span>
-    </li>
-  </ul>
-  <div class="cm-tooltip cm-completionInfo cm-completionInfo-right" style="top: 15.9436px; max-width: 400px;">
-  HTML heading 1 tag
-  </div>
- </div> */
 
-
+/* 자동완성 옆에 부연설명하는 모달창 */
+.cm-completionInfo-right {
+  color: #c7c7c7!important;
+  padding: 100rem;
+  font-weight: bold;
+  min-height: 200px;
+  border-radius: 8px;
+  margin:-.25rem;
+  margin-left: 1rem!important;
+}
 .cm-completionLabel {
   display: inline-block;
   color: #fff;
   vertical-align: middle;
   line-height: 1.5rem;
+  font-size: 14px;
 }
 
 .cm-completionIcon {
   margin-right: .5rem;
 }
+
+/* 
+cm-completionIcon cm-completionIcon-tagName
+cm-completionLabel cm-completionMatchedText
+cm-completionIcon cm-completionIcon-keyword
+cm-completionLabel cm-completionMatchedText
+cm-completionIcon cm-completionIcon-tagName
+cm-completionLabel cm-completionMatchedText
+cm-completionIcon cm-completionIcon-keyword
+cm-completionLabel cm-completionMatchedText
+cm-completionIcon cm-completionIcon-tagName
+cm-completionLabel cm-completionMatchedText
+cm-completionIcon cm-completionIcon-keyword
+cm-completionLabel cm-completionMatchedText
+cm-completionIcon cm-completionIcon-tagName
+cm-completionLabel cm-completionMatchedText
+cm-completionIcon cm-completionIcon-keyword
+cm-completionLabel cm-completionMatchedText
+cm-completionIcon cm-completionIcon-tagName
+cm-completionLabel cm-completionMatchedText
+cm-completionIcon cm-completionIcon-keyword
+cm-completionLabel cm-completionMatchedText
+cm-completionIcon cm-completionIcon-tagName
+cm-completionLabel cm-completionMatchedText
+cm-completionIcon cm-completionIcon-keyword
+cm-completionLabel cm-completionMatchedText
+cm-tooltip cm-completionInfo cm-completionInfo-right
+cm-tooltip-autocomplete cm-tooltip cm-tooltip-below
+
+
+/* 
+ 
+.cm-tooltip-lint {
+  width: 80%
+}
+.cm-tooltip-arrow:before {
+  border-color: #66b !important;
+}
+.cm-tooltip-arrow:after {
+    
+  color: red;
+}
+
+.light .cm-tooltip-cursor  {
+  background-color: red
+}
+.dark .cm-tooltip-cursor  {
+    background-color: red
+}
+.light .cm-tooltip-cursor  {
+  color: red
+}
+.dark .cm-tooltip-cursor  {
+  color: red
+}
+.cm-tooltip-cursor {
+  border: none;
+  padding: 5px;
+  border-radius: 4px; 
+} */
